# Projet-CDAA

./: CMakeLists.txt  Contact.cpp  Contact.h  Doxyfile  Interaction.cpp  Projet-CDAA.pro  README.md  diagrammeClasses  diagrammeUseCase  listeContact.json  main.cpp
Interaction/: Interaction.h
data/: data.sqlite  placeholders.sql  tables.sql
src/: main.cpp
src/Contact/: Contact.cpp  Contact.h
src/GUI/ContactButton/: ContactButton.cpp  ContactButton.h
src/GUI/ContactCreator/: ContactCreator.cpp  ContactCreator.h  ContactCreator.ui  ui_ContactCreator.h
src/GUI/ContactInfo/: ContactInfo.cpp  ContactInfo.h  ContactInfo.ui  ui_ContactInfo.h  ui_InteractionCreator.h
src/GUI/ContactList/: ContactDeleteDialog.ui  ContactList.cpp  ContactList.h  ContactList.ui  ui_ContactDeleteDialog.h  ui_ContactList.h
src/GUI/ContactModifier/: ContactModifier.cpp  ContactModifier.h  ContactModifier.ui  ui_ContactModifier.h
src/GUI/InteractionCreator/: InteractionCreator.ui  ui_InteractionCreator.h
src/GUI/InteractionViewer/: InteractionViewer.cpp  InteractionViewer.h  InteractionViewer.ui  ui_InteractionViewer.h
src/GUI/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui  (+1 more)
src/GestionContact/: GestionContact.cpp  GestionContact.h
src/GestionInteraction/: GestionInteraction.cpp  GestionInteraction.h
src/GestionTache/: GestionTache.cpp  GestionTache.h
src/Interaction/: Interaction.cpp  Interaction.h
src/InterfaceBaseDeDonnee/: InterfaceBaseDeDonnee.cpp  InterfaceBaseDeDonnee.h
src/InterfaceJSON/: InterfaceJSON.cpp  InterfaceJSON.h
src/Tache/: Tache.cpp  Tache.h
(+4 files in other folders)
